fix admin top bar overflow

--- a/src/styles/pages/_admin.scss
+++ b/src/styles/pages/_admin.scss
@@ -20,6 +20,14 @@
     padding-left: 15px;
     padding-right: 15px;
     border-bottom: 2px solid $light-grey;
+    overflow-x: scroll;
+
+    &--createCourse {
+      width: 132px;
+      padding-left: 10px;
+      padding-right: 10px;
+      text-align: center;
+    }
 
     &__nav {
       height: 80%;
@@ -38,7 +46,7 @@
       border-left: 1px solid tint($brand-color, 50%);
       font-size: $font-size-medium;
 
-      @media screen and (max-width: 1200px) {
+      @media screen and (max-width: 1330px) {
         padding: 6px 20px 6px 20px;
       }
 
@@ -49,7 +57,7 @@
         padding: 6px 80px 6px 80px;
         border-radius: 2px;
 
-        @media screen and (max-width: 1200px) {
+        @media screen and (max-width: 1330px) {
           padding: 6px 20px 6px 20px;
         }
       }
